2006-11-04  Doug Hellmann  <dhellmann@racemi.com>

	* views.py (main): Limit the recent and popular lists to 5 items each.

	* templates/index.html: Rearrange and start writing introduction copy.

2006-10-29  Doug Hellmann  <dhellmann@racemi.com>

	* views.py (remove_from_queue): Deal with removing items from the
	user's queue.

	* urls.py (urlpatterns): Add the url for a /queue/item/ so we can
	delete items from the queue.

	* models.py (QueueItem.as_dict): Include the truncated_summary as
	a different value from the full summary.

2006-10-28  Doug Hellmann  <dhellmann@racemi.com>

	* views.py (queue): Sort items by reverse order so the most recent
	appears at the top of the queue.

	* util.py (convert_feed_to_entries): Force utf-8 encoding for the
	strings, replacing invalid characters, so we know we can pull the
	data base out of the database again.

	* feeds.py (UserFeed.items): Sort items by the date they were
	added to the queue.

	* views.py (queue): If they post to the queue, they are trying to
	add something to it.

	* util.py (convert_feed_to_entries): Only add entries to the list
	if there are enclosures.

	* models.py (Podcast.as_dict): Utility method used by the views to
	obtain a representation of the podcast to send as JSON data.
	(QueueItem): Change 'description' field to 'summary'.
	(QueueItem.as_dict): Utility method used by the views to obtain a
	representation of the podcast to send as JSON data.

2006-10-24  Doug Hellmann  <dhellmann@racemi.com>

	* views.py (external): Add the podcast id to the response to be
	consistent with feed_list.

2006-10-22  Doug Hellmann  <dhellmann@racemi.com>

	* views.py (external): Add a view to fetch and parse the feed
	contents.
	(feed_list): Add the feed url to the response.
	(external): Add the feed url to the response.

	* urls.py (urlpatterns): Add /external/ URL for "proxying" to get
	the feed contents.

	* models.py (Podcast.get_current_feed_contents): New method to
	fetch and parse the podcast feed.
